# hexgame

./: .dir-locals.el  CMakeLists.txt  README.md  appveyor.yml  build-mingw64.ps1
ai/: CMakeLists.txt
ai/disruptor/: CMakeLists.txt  disruptor.scm  hex.scm
ai/dummy/: CMakeLists.txt  dummy.c
ai/pessimist/: CMakeLists.txt  pessimist.scm
cmake/: FindChicken.cmake
hexmon/: CMakeLists.txt
hexmon/include/hex/: hexmon.h
hexmon/src/: hexmon.c  hexmon_private.h  parser.c  posix.c  windows.c
hextk/: CMakeLists.txt  hextk.tcl  main.tcl
hextk/lib/app-hextk/: game.tcl  hextk.tcl  pkgIndex.tcl
libhex/: CMakeLists.txt  pkgIndex.tcl
libhex/include/hex/: hex.h
libhex/src/: board.c  hex_private.h  serialize.c  tcl.c  winner.c
support/: CMakeLists.txt
support/scheme/: CMakeLists.txt  costheap.scm  hex.scm  hexmon.scm  pathtools.scm  tictoc.scm
support/windows/: CMakeLists.txt
support/windows/include/: unistd.h
support/windows/include/sys/: param.h
support/windows/tcl/: nt.c  ntjobs.c  pkgIndex.tcl
