set (HEXTK_LAUNCHER ${CMAKE_CURRENT_BINARY_DIR}/hextk)
file (WRITE ${HEXTK_LAUNCHER} "#!/bin/sh\n")
file (APPEND ${HEXTK_LAUNCHER} "export PATH=\"${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_BINDIR}:$PATH\"\n")
file (APPEND ${HEXTK_LAUNCHER} "exec ${TK_WISH} \"${CMAKE_INSTALL_PREFIX}/${HEX_DATADIR}/hextk/main.tcl\" $@\n")

install (PROGRAMS
  ${HEXTK_LAUNCHER}
  DESTINATION ${CMAKE_INSTALL_BINDIR})
install (DIRECTORY lib/app-hextk
  DESTINATION ${HEX_DATADIR}/hextk/lib)
install (FILES main.tcl
  DESTINATION ${HEX_DATADIR}/hextk)
